# Changelog

## Alpha 007 (Not Yet released)

* Inventar hinzugefügt
* Launcher hinzugefügt
* Support für XBox 360 Controller hinzugefügt
* Atmosphären-Sound hinzugefügt
* KI der Totenköpfe verbessert
* Map erweitert
* Performance der Screenshot-Funktion verbessert
* Fahrende Autos zur Straße hinzugefügt

## Alpha 006 (01.03.2024)

* Komplette Neuentwicklung auf anderer technologischer Basis
* TMX-Tilemap
* Sammelbare Münzen
* Verschiebbare Kisten
* Totenköpfe als Gegner
* Pymunk Physik-Engine
* Man kann schießen
* Automatische Selbstheilung

## Alpha 005

* Nicht veröffentlicht

## Alpha 004 (17.01.2024)

* Aufgabe mit Sprengstoff hinzugefügt
* Tretminen hinzugefügt
* Schwert hinzugefügt
* Tag-Nacht-Zyklus hinzugefügt
* Aktuelle Aufgabe wird jetzt angezeigt im Pausenmenü
* Grafik-Einstellungen feiner einstellbar
* Intro entfernt
* Maussteuerung entfernt
* Fehler im Handling der Tastatur-Events korrigiert
* Wenn man das Spiel pausiert, werden jetzt auch die Soundeffekte gestoppt

## Alpha 003 (09.01.2024)

* Intro
* Aufgabe mit Zahlencode hinzugefügt
* Hunde KI verbessert
* Dekoration hinzugefügt

## Alpha 002 (21.11.2023)

* Aufgabe mit Holzbrettern hinzugefügt
* Mehr Musik-Tracks
* Spielstände jetzt aufwärtskompatibel
* Experimentelle Maussteuerung
* Video-Einstellungen: Auflösungen kleiner als 640x480 entfernt
* Unterstützung für High DPI

## Alpha 001 (17.11.2023)

* Erster öffentlicher Alpha Build